--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,30 +1,47 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
-    <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+    android:viewportWidth="207"
+    android:viewportHeight="207">
+  <path
+      android:pathData="M203.68,103.09C203.68,158.09 159.09,202.68 104.09,202.68C49.09,202.68 4.5,158.09 4.5,103.09C4.5,48.09 49.09,3.5 104.09,3.5C159.09,3.5 203.68,48.09 203.68,103.09Z"
+      android:fillColor="#A9DCCF"
+      android:fillType="evenOdd"/>
+  <path
+      android:pathData="M103.63,156.02C133.12,156.02 157.02,132.12 157.02,102.63C157.02,73.14 133.12,49.24 103.63,49.24C74.14,49.24 50.24,73.14 50.24,102.63C50.24,132.12 74.14,156.02 103.63,156.02Z"
+      android:strokeWidth="5.38117"
+      android:fillColor="#00000000"
+      android:fillType="evenOdd"
+      android:strokeColor="#6FC5AF"/>
+  <path
+      android:pathData="M69.07,103.54C69.07,103.54 72.37,101.26 78.78,101.26C85.19,101.26 88.49,103.54 88.49,103.54"
+      android:strokeWidth="5.38117"
+      android:fillColor="#00000000"
+      android:strokeColor="#6FC5AF"
+      android:strokeLineCap="round"/>
+  <path
+      android:pathData="M114.64,124.58C114.64,124.58 109.93,128.88 103.52,128.88C97.1,128.88 92.39,124.58 92.39,124.58"
+      android:strokeWidth="5.38117"
+      android:fillColor="#00000000"
+      android:strokeColor="#6FC5AF"
+      android:strokeLineCap="round"/>
+  <path
+      android:pathData="M117.5,103.54C117.5,103.54 120.8,101.26 127.21,101.26C133.62,101.26 136.92,103.54 136.92,103.54"
+      android:strokeWidth="5.38117"
+      android:fillColor="#00000000"
+      android:strokeColor="#6FC5AF"
+      android:strokeLineCap="round"/>
+  <path
+      android:pathData="M102.35,51.03C102.35,51.03 95.29,59.59 98.71,64.38C102.13,69.18 110.85,70.45 114.49,68.02"
+      android:strokeWidth="5.38117"
+      android:fillColor="#00000000"
+      android:strokeColor="#6FC5AF"
+      android:strokeLineCap="round"/>
+  <path
+      android:pathData="M103.5,103.5m-100,0a100,100 0,1 1,200 0a100,100 0,1 1,-200 0"
+      android:strokeAlpha="0.78"
+      android:strokeWidth="7"
+      android:fillColor="#00000000"
+      android:strokeColor="#6FC5AF"
+      android:fillAlpha="0.78"/>
 </vector>
